--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
@@ -1,4 +1,4 @@
-Description:
+Description: creates a docker swarm cluster, this pulls dockerfiles from git repo, then build docker images and pushes them to ECR
 
 Parameters:
 
