--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/CovidWebServices-DockerCompose/docker-compose.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/CovidWebServices-DockerCompose/docker-compose.yml
@@ -1,14 +1,22 @@
 #This file is already in a git repo and will not be called from here
 #The file is located here: https://github.com/BFL-Psycho/cac-aa2-covid-services.git
-version: '3.8'
+version: "3.8"
 
 services:
-   broad-covid19-dashboard:
-     image: covid-dashboard:latest
-     ports:
-        - "8080:80"
+  broad-covid19-dashboard:
+    image: 251277730687.dkr.ecr.us-east-1.amazonaws.com/cac-aa2-ecr-1
+    ports:
+      - "80:80"
+    deploy:
+      mode: global # this will deploy service automatically on all nodes except for manager
+      constraints:
+        - node.role == worker
 
-   nhs-covid19-registration-form:
-     image: covid-form:latest
-     ports:
-       - "5000:5000"
+  nhs-covid19-registration-form:
+    image: 251277730687.dkr.ecr.us-east-1.amazonaws.com/cac-aa2-covid-form-ecr
+    ports:
+      - "5000:80"
+    deploy:
+      mode: global # this will deploy service automatically on all nodes except for manager
+      constraints:
+        - node.role == worker
