Updated assignment 2: Docker service replication

--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
@@ -33,6 +33,8 @@ Resources:
         - Key: Name
           Value: CACAA2DockerSwarmSecurityGroup
 
+  # Docker Swarm will ensure to automatically run all the necessary services on the new nodes joining the cluster
+  # 
   CACAA2BroadBuildServer01:
     Type: AWS::EC2::Instance
     Properties:
