Integrated ELK stack into the deployment script

--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/3-ECRStack/cac-aa2-ecr-stack.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/3-ECRStack/cac-aa2-ecr-stack.yml
@@ -111,4 +111,16 @@ Resources:
   
 #Provide exports
 
+Outputs:
+
 #Export ECR Urls
+  CovidDashboardECRUrl:
+    Description: Reference to
+    Value: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${CovidDashboardECRName}"
+    Export:
+      Name: ECRStack:CovidDashboardECRUrl
+  CovidRegistrationFormECRUrl:
+    Description: Reference to
+    Value: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${CovidRegistrationFormECRName}"
+    Export:
+      Name: ECRStack:CovidRegistrationFormECRUrl
