--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/4-MasterDockerSwarmStack/cac-aa2-docker-swarm-master.yml
@@ -127,3 +127,13 @@ Resources:
       Tags:
         - Key: Name
           Value: CACAA2BroadBuildServer01
+
+
+Outputs:
+
+  BuildServerPrivateIp:
+    Description: Reference to 
+    Value: !GetAtt CACAA2BroadBuildServer01.PrivateIp
+    Export:
+      Name: DockerSwarmMasterStack:BuildServerPrivateIp
+# Export master Private Ip
